--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -767,15 +767,12 @@ input[type=number]:not(:hover) {
 
 /* highlight rows on hover */
 .itemcontrol + div:hover,
-.sheet-skills-grid span:hover {
+.sheet-skills-grid span.sheet-skills-row:hover {
   background-color: #e6e6e6;
 }
 
-/* hide/show areas */
-.sheet-expand,
-.sheet-expand-armor-row2,
-.sheet-expand-shield-row2,
-.sheet-expand-mount-row2 {
+/* show/hide areas */
+.sheet-expand {
   position: absolute;
   z-index: 6;
   top: -4px;
@@ -784,10 +781,7 @@ input[type=number]:not(:hover) {
   opacity: 0;
 }
 
-input.sheet-expand+span::before,
-input.sheet-expand-armor-row2+span::before,
-input.sheet-expand-shield-row2+span::before,
-input.sheet-expand-mount-row2+span::before {
+input.sheet-expand+span::before {
   font-family: pictos;
   font-size: 14px;
   position: absolute;
@@ -802,56 +796,39 @@ input.sheet-expand-mount-row2+span::before {
   color: #c3996b;
 }
 
-.sheet-mount-grid input.sheet-expand-mount-row2+span::before {
+.sheet-mount-grid input.sheet-expand+span::before {
   margin-top: 2.75em;
 }
 
-.repitem .sheet-weapons-grid input.sheet-expand+span::before,
-.repitem .sheet-weapons-grid input.sheet-expand:checked+span::before,
-.repitem .sheet-monster-attacks-grid input.sheet-expand+span::before,
-.repitem .sheet-monster-attacks-grid input.sheet-expand:checked+span::before,
-.repitem .sheet-talents-grid input.sheet-expand+span::before,
-.repitem .sheet-talents-grid input.sheet-expand:checked+span::before,
-.sheet-armor-box10 input.sheet-expand-armor-row2+span::before,
-.sheet-armor-box10 input.sheet-expand-armor-row2:checked+span::before,
-.sheet-armor-box10-2 input.sheet-expand-armor-row2+span::before,
-.sheet-armor-box10-2 input.sheet-expand-armor-row2:checked+span::before,
-.sheet-shield-box12 input.sheet-expand-shield-row2+span::before,
-.sheet-shield-box12 input.sheet-expand-shield-row2:checked+span::before,
-.repitem .sheet-gear-grid input.sheet-expand+span::before,
-.repitem .sheet-gear-grid input.sheet-expand:checked+span::before,
-.sheet-mount-grid input.sheet-expand-mount-row2+span::before,
-.sheet-mount-grid input.sheet-expand-mount-row2:checked+span::before,
-.repitem .sheet-mount_gear-grid input.sheet-expand+span::before,
-.repitem .sheet-mount_gear-grid input.sheet-expand:checked+span::before,
-.repitem .sheet-spells-grid input.sheet-expand+span::before,
-.repitem .sheet-spells-grid input.sheet-expand:checked+span::before {
+input.sheet-expand+span::before,
+input.sheet-expand:checked+span::before {
   opacity: 0.25;
 }
 
 .repitem .sheet-weapons-grid:hover input.sheet-expand+span::before,
 .repitem .sheet-monster-attacks-grid:hover input.sheet-expand+span::before,
 .repitem .sheet-talents-grid:hover input.sheet-expand+span::before,
-.sheet-armor-box10:hover input.sheet-expand-armor-row2+span::before,
-.sheet-armor-box10-2:hover input.sheet-expand-armor-row2+span::before,
-.sheet-shield-box12:hover input.sheet-expand-shield-row2+span::before,
+.sheet-armor-box10:hover input.sheet-expand+span::before,
+.sheet-armor-box10-2:hover input.sheet-expand+span::before,
+.sheet-shield-box12:hover input.sheet-expand+span::before,
 .repitem .sheet-gear-grid:hover input.sheet-expand+span::before,
-.sheet-mount-grid:hover input.sheet-expand-mount-row2+span::before,
+.sheet-mount-grid:hover input.sheet-expand+span::before,
 .repitem .sheet-mount_gear-grid:hover input.sheet-expand+span::before,
-.repitem .sheet-spells-grid:hover input.sheet-expand+span::before {
+.repitem .sheet-spells-grid:hover input.sheet-expand+span::before,
+.sheet-skills-row:hover input.sheet-expand+span::before {
   opacity: 0.75;
 }
 
 input.sheet-expand~.sheet-input-textarea,
-input.sheet-expand-mount-row2~.sheet-input-textarea,
+.repitem input.sheet-expand~.sheet-input-textarea,
 input.sheet-expand~.sheet-weapons-subgrid,
-input.sheet-expand-armor-row2~.sheet-armor-row2,
-input.sheet-expand-shield-row2~.sheet-shield-row2 {
+input.sheet-expand~.sheet-armor-row2,
+input.sheet-expand~.sheet-shield-row2,
+input.sheet-expand~.sheet-animal-handling-row2 {
   display: none;
 }
 
-input.sheet-expand:checked~.sheet-input-textarea,
-input.sheet-expand-mount-row2:checked~.sheet-input-textarea {
+input.sheet-expand:checked~.sheet-input-textarea {
   line-height: 1.2em;
   display: block;
   box-sizing: border-box;
@@ -864,8 +841,9 @@ input.sheet-expand-mount-row2:checked~.sheet-input-textarea {
 }
 
 input.sheet-expand:checked~.sheet-weapons-subgrid,
-input.sheet-expand-armor-row2:checked~.sheet-armor-row2,
-input.sheet-expand-shield-row2:checked~.sheet-shield-row2 {
+input.sheet-expand:checked~.sheet-armor-row2,
+input.sheet-expand:checked~.sheet-shield-row2,
+input.sheet-expand:checked~.sheet-animal-handling-row2 {
   display: grid;
   box-sizing: border-box;
   margin: 0;
@@ -2117,24 +2095,73 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 /* ---------------------------------- Skills */
 .sheet-skills-grid>span {
+  position: relative;
   display: grid;
   padding: 1px 0 1px 0;
   grid-column-gap: 2px;
   grid-row-gap: 2px;
-  grid-template-columns: auto 3em 2em 0.75em 2em;
+  grid-template-columns: auto 3em 3em;
 }
 
 .sheet-skills-grid>span>div {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  width: 104%;
+  justify-content: space-evenly;
   padding: 0;
-  margin: -1px 0 0 -6px;
+}
+
+.sheet-skills-row .sheet-skills-row2 {
+  grid-column: 1/4;
+  grid-row-start: 2;
+  grid-template-columns: 100%;
+}
+
+.sheet-skills-row2-header {
+  display: grid;
+  grid-column: 1/6;
+  grid-row-start: 1;
+  grid-template-columns: auto 2em 2em 2em 2em;
+  background-color: #000;
+  height: 1.1em;
+}
+
+.sheet-skills-row2-body {
+  display: grid;
+  grid-column: 1/6;
+  grid-row-start: 2;
+  grid-template-columns: auto 2em 2em 2em 2em;
+  height: 1.2em;
+  align-content: end;
+}
+
+.sheet-skills-box5 {
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
+.sheet-skills-box6 {
+  grid-column-start: 2;
+  grid-row-start: 1;
+}
+.sheet-skills-box7 {
+  grid-column-start: 3;
+  grid-row-start: 1;
+}
+.sheet-skills-box8 {
+  grid-column-start: 4;
+  grid-row-start: 1;
+}
+.sheet-skills-box9 {
+  grid-column-start: 5;
+  grid-row-start: 1;
+}
+
+.sheet-skills-grid button {
+  text-align: left;
+  padding-left: 1.5em;
 }
 
 .sheet-skills-box1 {
-  grid-column: 1/6;
+  grid-column: 1/4;
   grid-row-start: 1;
 }
 
@@ -2145,16 +2172,6 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 .sheet-skills-box3 {
   grid-column-start: 3;
-  grid-row-start: 1;
-}
-
-.sheet-skills-box4 {
-  grid-column-start: 4;
-  grid-row-start: 1;
-}
-
-.sheet-skills-box5 {
-  grid-column-start: 5;
   grid-row-start: 1;
 }
 
@@ -3504,9 +3521,11 @@ input[type="checkbox"].sheet-legendary:checked+span::before {
   font-size: 1em;
   font-weight: bold;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  justify-self: center;
+  width: 105%;
   margin: 2px -9px 2px -9px;
-  padding: 3px 5px 3px 5px;
+  padding: 0 5px 0 5px;
   word-break: break-word;
   color: #fff;
   border-top-left-radius: 0;
@@ -3547,6 +3566,10 @@ input[type="checkbox"].sheet-legendary:checked+span::before {
   font-size: .85em;
 }
 
+.sheet-rolltemplate-forbiddenlands .sheet-template-grid-item.sheet-template-span-six.sheet-template-header:empty {
+  display: none;
+}
+
 .sheet-rolltemplate-forbiddenlands div.sheet-template-subtitle {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-size: 1em;
@@ -3554,8 +3577,8 @@ input[type="checkbox"].sheet-legendary:checked+span::before {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 -5px 5px -5px;
-  padding: 2px;
+  margin: 0 -5px 0px -5px;
+  padding: 0 2px 0 2px;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-white-dice~.sheet-template-span-left,
