--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -228,7 +228,7 @@ button[type=roll].sheet-rolldice::before {
 .sheet-secondary-field, .sheet-mystic-field, .sheet-melee-field, .sheet-ranged-field, 
 .sheet-combat-field, .sheet-combat-textarea, .sheet-save-field, .sheet-notes-field, .sheet-notes-textarea, 
 .sheet-weight-box, .sheet-weightsub-box, .sheet-whisper-select, .sheet-mattack-text, .sheet-rattack-text, 
-.sheet-save-misc{
+.sheet-save-misc, .sheet-mattack-label, .sheet-rattack-label, .sheet-mattack-bonus, .sheet-rattack-bonus{
     background-color:#ebebeb;
 }
 .sheet-fraction-grid-container{
@@ -311,9 +311,16 @@ button[type=roll].sheet-rolldice::before {
     background: #9cb09b;
     border-bottom-color: black;
 }
+.sheet-meleetemp-container{
+    display:grid;
+    align-items:center;
+    padding-bottom:5px;
+    grid-template-columns: 160px 50px 50px 50px 50px 60px 40px
+}
 .sheet-mattack-grid-container{
     display:grid;
-    grid-template-columns: 160px 35px 50px 48px 35px 50px 50px 35px 62px 50px 170px
+    align-items:center;
+    grid-template-columns: 160px 80px 80px 80px 62px 75px
 }
 button[type=roll].sheet-meleedice::before {
     content: ''; 
@@ -331,21 +338,57 @@ button[type=roll].sheet-rangeddice::before {
 .sheet-damage-dice{
     width: 60px;
 }
+div.sheet-mbonus-hide {
+    display: none;
+}
+input.sheet-mbonus-toggle[value='1']~div.sheet-mbonus-hide {
+    display: block;
+}
+.sheet-mbonus-container{
+    display:grid;
+    grid-template-columns: 213px 213px 301px
+}
 .sheet-mattack-text, .sheet-rattack-text{
-    width: 48px;
+    width: 38px;
 }
 .sheet-mattack-notes{
-    width:170px;
+    height:18px;
+    width:300px;
+    margin:0px;
+    overflow:auto;
+    resize:vertical;
+}
+.sheet-rattack-notes{
+    height:18px;
+    width:512px;
+    margin:0px;
+    overflow:auto;
+    resize:vertical;
 }
 .sheet-ranged-attack-panel{
     max-width:745px;
+    border-bottom:5px solid #889987;
+}
+.sheet-rangedtemp-container{
+    display:grid;
+    align-items:center;
+    padding-bottom:5px;
+    grid-template-columns: 160px 50px 50px 60px 40px
 }
 .sheet-rattack-grid-container{
     display:grid;
-    grid-template-columns: 160px 35px 50px 48px 35px 62px 50px 50px 50px 50px 155px
+    align-items:center;
+    grid-template-columns: 160px 80px 80px 62px 40px 40px 40px 75px
 }
-.sheet-rattack-notes{
-    width: 153px;
+div.sheet-rbonus-hide {
+    display: none;
+}
+input.sheet-rbonus-toggle[value='1']~div.sheet-rbonus-hide {
+    display: block;
+}
+.sheet-rbonus-container{
+    display:grid;
+    grid-template-columns: 213px 563px
 }
 .sheet-physical-grid-container{
     display:grid;
