fix squire repeating section

--- a/Pendragon5thEdition/src/pug/character.pug
+++ b/Pendragon5thEdition/src/pug/character.pug
@@ -186,7 +186,7 @@
             input(name=`attr_squire_${attrName}` placeholder='#' title=`@{squire_${attrName}}` type='number' value='')
           +checkboxInput(`squire ${val} check`)
       .repeating-container
-        fieldset(class='repeating_squire')
+        fieldset(class='repeating_squire_skills')
           .row
               +textInput('name')
               +numberInput('skill')
