--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
@@ -6,25 +6,14 @@
 	min-width: 850px;
 
 }
-
-.sheet-useBackground input[value="1"]:checked ~ *.sheet-background {
+.charsheet {
 	padding: 0  3px 3px !important;
+	margin-top: -13px;
+	min-width: 850px;
 	background: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/assets/parchment.jpg?raw=true');
 	border: 27px solid transparent;
 	border-image: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/assets/csborder.png?raw=true') 27 round;
-	margin-top: -13px;
-	min-width: 850px;
 }
-
-.sheet-useBackground input[value="2"]:checked ~ *.sheet-background {
-	padding: 0  3px 3px !important;
-	background: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/assets/parchment_dark.jpg?raw=true');
-	border: 27px solid transparent;
-	border-image: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/assets/csborder_dark.png?raw=true') 27 round;
-	margin-top: -13px;
-	min-width: 850px;
-}
-
 .sheet-area-border {
     border-radius: 5px;
     padding:2px;
@@ -38,13 +27,6 @@
   background-color: white;
   border-radius: 5px;
   padding: 1px;
-}
-.sheet-wrap-box-banner {
-  border: 1px solid black;
-  background-color: rgb(253, 249, 239);
-  border-radius: 5px;
-  padding: 1px;
-  float: left;
 }
 .sheet-wrap-box-transparent {
   border: 1px solid black;
@@ -404,19 +386,13 @@ button[type=roll] span {
 }
 .sheet-header-info input[type=text],
 .sheet-header-info input[type=number] {
-	margin-top: 0 !important;
+	margin-top: 5px;
 	margin-bottom: 0 !important;
+	padding: 2px 2px 0 2px;
 }
 .sheet-dnd-image-wrapper img {
   display: block;
   max-height: 40px;
-}
-.sheet-banner-l-wrapper img {
-  float: left;
-  border-radius: 5px;
-}
-.sheet-banner-r-wrapper img {
-  display: block;
 }
 
 /* === SKILLS === */
