--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -61,6 +61,33 @@ h3.sheet-divide::after, h3.sheet-divide::before {
     width: 220px;
 }
 
+h3.sheet-site-divide::after, h3.sheet-site-divide::before {
+    display: inline-block;
+    content: "";
+    height: 5px;
+    border-top: 2px solid black;
+    top: 0;
+    width: 331px;
+}
+
+h3.sheet-site-denizens-divide::after, h3.sheet-site-denizens-divide::before {
+    display: inline-block;
+    content: "";
+    height: 5px;
+    border-top: 2px solid black;
+    top: 0;
+    width: 336px;
+}
+
+h3.sheet-site-divide-notes::after, h3.sheet-site-divide-notes::before {
+    display: inline-block;
+    content: "";
+    height: 5px;
+    border-top: 2px solid black;
+    top: 0;
+    width: 352px;
+}
+
 h4 {
     font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
@@ -123,12 +150,24 @@ hr {
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
+hr.sheet-nav-top {
+    margin-top: 0.5em;
+    margin-bottom: 0.2em; 
+}
+
+hr.sheet-nav-bottom {
+    margin-top: 0.2em;
+    margin-bottom: 0.5em; 
+}
+
 .sheet-page1tab, 
 .sheet-page2tab,
 .sheet-page3tab,
 .sheet-page4tab,
 .sheet-page5tab,
-.sheet-page6tab {
+.sheet-page6tab,
+.sheet-page7tab,
+.sheet-page8tab {
     display: none;
 }
 
@@ -137,7 +176,9 @@ input[type=radio].sheet-page2:checked ~ div.sheet-page2tab,
 input[type=radio].sheet-page3:checked ~ div.sheet-page3tab,
 input[type=radio].sheet-page4:checked ~ div.sheet-page4tab,
 input[type=radio].sheet-page5:checked ~ div.sheet-page5tab,
-input[type=radio].sheet-page6:checked ~ div.sheet-page6tab {
+input[type=radio].sheet-page6:checked ~ div.sheet-page6tab,
+input[type=radio].sheet-page7:checked ~ div.sheet-page7tab,
+input[type=radio].sheet-page8:checked ~ div.sheet-page8tab {
     display: block;
 }
 
@@ -237,6 +278,24 @@ input.sheet-page6 {
 
 span.sheet-page-label-6 {
     margin-left: -60px;
+    width: 56px;
+}
+
+input.sheet-page7 {
+    width: 48px;
+}
+
+span.sheet-page-label-7 {
+    margin-left: -51px;
+    width: 56px;
+}
+
+input.sheet-page8 {
+    width: 144px;
+}
+
+span.sheet-page-label-8 {
+    margin-left: -148px;
     width: 56px;
 }
 
@@ -691,7 +750,8 @@ input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle {
     margin-right: 10px;
 }
 
-.sheet-move-outline {
+.sheet-move-outline,
+.sheet-theme-outline {
     border: 1px solid #414042;
 }
 
@@ -844,7 +904,7 @@ span.sheet-preview-roll {
 }
 
 .sheet-button-container {
-    width: 2.4em;
+    width: 2.5em;
     border-right: 1px solid black;
 }
 
@@ -1240,6 +1300,236 @@ span.sheet-show-bond-info {
     margin-top: 0.3em;
 }
 
+/* SITES */
+.sheet-site-container {
+    border: 2px solid #414042;
+    border-radius: 1em;
+    margin-bottom: 1em;
+    padding: 1em;
+}
+
+.sheet-site-notes {
+    width: 99%;
+}
+
+.sheet-site-name,
+.sheet-site-location,
+.sheet-site-descriptors {
+    border: none;
+    border-radius: 0em;
+    background: transparent;
+    padding: 0;
+    padding-left: 0.5em;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+    color: #343433;
+}
+
+.sheet-site-descriptors {
+    width: 43%;
+}
+
+.sheet-site-location {
+    width: 40%;
+}
+
+p.sheet-site-title {
+    text-align: left;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+    font-size: 16px;
+    margin: 0 0 0px;
+    padding: 0.1em 0.2em 0.08em 0.2em;
+    text-transform: uppercase;
+    vertical-align: bottom;
+    display: inline;
+    color: #343433;
+    border-radius: 0.3em 0em 0em 0.3em;
+}
+
+.sheet-site-name::placeholder,
+.sheet-site-location::placeholder,
+.sheet-site-descriptors::placeholder {
+    color: #8a8a8a;
+}
+
+input[type="checkbox"].sheet-show-site-info:checked ~ div.sheet-show-site-info {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+input[type="checkbox"].sheet-show-site-info {
+    width: 4.5em;
+    height: 18px;
+    top: 0;
+    opacity: 0;
+    border-radius: 4px;
+    padding: 2px 4px;
+}
+
+input[type="checkbox"].sheet-show-site-info:hover ~ span.sheet-show-site-info {
+    border-radius: 4px;
+    padding: 2px 4px;
+    background-color: #ccc;
+    color: #343433;
+}
+
+input[type="checkbox"].sheet-show-site-info:checked ~ span.sheet-show-site-info {
+    border-radius: 4px;
+    padding: 2px 4px;
+    border: 1px solid;
+    background-color: #414042;
+    color: white;
+}
+
+span.sheet-show-site-info {
+    margin-left: -4.9em;
+    border-radius: 4px;
+    padding: 2px 4px;
+    border: 1px solid;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+}
+
+.sheet-site-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.sheet-site-column {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:48%;
+    padding: 0.5em 0em 0.5em 0.7em;
+}
+
+.sheet-denizen-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0.5em;
+}
+
+.sheet-denizen-column {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 22%;
+    padding: 0.5em 0em 0.5em 0em;
+}
+
+.sheet-denizen-option-column {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 22%;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+}
+
+.sheet-denizen-option{
+    font-size: 12px;
+}
+
+.sheet-site-progress-header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 0.5em 9em 0em 8.5em;
+}
+
+.sheet-denizen-operand-column {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 2%;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+}
+
+p.sheet-denizen-title {
+    text-align: left;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+    font-size: 12px;
+    margin: 0 0 0px;
+    text-transform: uppercase;
+    vertical-align: bottom;
+    display: inline;
+    color: #343433;
+}
+
+.sheet-denizen-input {
+    border: none;
+    border-radius: 0em;
+    background: transparent;
+    padding: 0;
+    padding: 0.5em;
+    width: 100%;
+}
+
+.sheet-denizen-operand {
+    font-weight: bold;
+}
+
+.sheet-denizen-background,
+.sheet-site-background {
+    background: #DEDDDC;
+}
+
+/* THEMES & DOMAINS */
+input[type=radio].sheet-ancient:checked ~ div.sheet-ancient,
+input[type=radio].sheet-corrupted:checked ~ div.sheet-corrupted,
+input[type=radio].sheet-fortified:checked ~ div.sheet-fortified,
+input[type=radio].sheet-hallowed:checked ~ div.sheet-hallowed,
+input[type=radio].sheet-haunted:checked ~ div.sheet-haunted,
+input[type=radio].sheet-infested:checked ~ div.sheet-infested,
+input[type=radio].sheet-ravaged:checked ~ div.sheet-ravaged,
+input[type=radio].sheet-wild:checked ~ div.sheet-wild {
+    display: block;
+}
+
+.sheet-theme-table {
+    width: 39em;  
+}
+
+.sheet-theme-header {
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+    width: 100%;
+    line-height: 24px;
+    font-size: 16px;
+    text-align: left;
+    margin: 0 0 0px;
+    margin-top: 0.7em;
+    padding: 0;
+    text-transform: uppercase;
+}
+
+.sheet-theme-title {
+    font-size: 23px;
+    margin-bottom: 0.3em;
+    margin-top: 0em;
+}
+
+.sheet-theme-body {
+    font-weight: normal;
+}
+
+.sheet-theme-container {
+    padding: 1em 1.5em 1.5em 1.5em;
+}
+
+.sheet-theme-column {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5em 1em 0.5em 1em;
+}
+
 /* ROLL TEMPLATE */
 .sheet-rolltemplate-ironsworn table>thead>tr>th, 
 .sheet-rolltemplate-ironsworn table>tbody>tr>th, 
@@ -1252,30 +1542,30 @@ span.sheet-show-bond-info {
 .sheet-rolltemplate-ironswornoracles table>tfoot>tr>th, 
 .sheet-rolltemplate-ironswornoracles table>thead>tr>td, 
 .sheet-rolltemplate-ironswornoracles table>tbody>tr>td, 
-.sheet-rolltemplate-ironswornoracles table>tfoot>tr>td {
+.sheet-rolltemplate-ironswornoracles table>tfoot>tr>td,
+.sheet-rolltemplate-ironsworndelve table>thead>tr>th, 
+.sheet-rolltemplate-ironsworndelve table>tbody>tr>th, 
+.sheet-rolltemplate-ironsworndelve table>tfoot>tr>th, 
+.sheet-rolltemplate-ironsworndelve table>thead>tr>td, 
+.sheet-rolltemplate-ironsworndelve table>tbody>tr>td, 
+.sheet-rolltemplate-ironsworndelve table>tfoot>tr>td {
     padding: 4px;
     border: none; 
 }
-.sheet-rolltemplate-ironsworn table {
+.sheet-rolltemplate-ironsworn table,
+.sheet-rolltemplate-ironswornoracles table,
+.sheet-rolltemplate-ironsworndelve table {
     width: 100%;
 	border: 1px solid;
 	color: black;
 	font-size: 1em;
-    font-family: Verdana, arial, sans-serif;
-    margin: 0px;
-}
-
-.sheet-rolltemplate-ironswornoracles table {
-    width: 100%;
-	border: 1px solid;
-	color: black;
-	font-size: 1em;
-    font-family: "Verdana", Arial, sans-serif;
+    font-family: Verdana, Arial, sans-serif;
     margin: 0px;
 }
 
 .sheet-rolltemplate-ironsworn th,
-.sheet-rolltemplate-ironswornoracles th {
+.sheet-rolltemplate-ironswornoracles th,
+.sheet-rolltemplate-ironsworndelve th {
 	background-color: #434b4d;
 	color: #ffffff;
 	padding: 2px;
@@ -1286,7 +1576,8 @@ span.sheet-show-bond-info {
 }
 
 .sheet-rolltemplate-ironsworn .sheet-subheader,
-.sheet-rolltemplate-ironswornoracles .sheet-subheader {
+.sheet-rolltemplate-ironswornoracles .sheet-subheader,
+.sheet-rolltemplate-ironsworndelve .sheet-subheader {
     background-color: #434b4d;
     color: #ffffff;
     line-height: 0.9em;
@@ -1300,7 +1591,8 @@ span.sheet-show-bond-info {
 }
 
 .sheet-rolltemplate-ironsworn .sheet-subfooter,
-.sheet-rolltemplate-ironswornoracles .sheet-subfooter {
+.sheet-rolltemplate-ironswornoracles .sheet-subfooter,
+.sheet-rolltemplate-ironsworndelve .sheet-subfooter {
     background-color: #b9b9b6;
     line-height: 0.9em;
     font-size: 0.9em;
@@ -1311,59 +1603,75 @@ span.sheet-show-bond-info {
     text-align: left;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-alert {
+.sheet-rolltemplate-ironsworndelve .sheet-rarity-die {
+    color: white;
+    background-color: #911d91;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-alert,
+.sheet-rolltemplate-ironsworndelve .sheet-alert {
     color: white;
     background-color: #761818;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-opportunity,
-.sheet-rolltemplate-ironswornoracles .sheet-opportunity {
+.sheet-rolltemplate-ironswornoracles .sheet-opportunity,
+.sheet-rolltemplate-ironsworndelve .sheet-opportunity {
     color: white;
     background-color: #0B3F0B;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-strong-hit {
+.sheet-rolltemplate-ironsworn .sheet-strong-hit,
+.sheet-rolltemplate-ironsworndelve .sheet-strong-hit {
     color: white;
     background-color: #125812;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-weak-hit {
+.sheet-rolltemplate-ironsworn .sheet-weak-hit,
+.sheet-rolltemplate-ironsworndelve .sheet-weak-hit {
     color: white;
     background-color: #186251;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-miss {
+.sheet-rolltemplate-ironsworn .sheet-miss,
+.sheet-rolltemplate-ironsworndelve .sheet-miss {
     color: white;
     background-color: #7D2B1D;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-complication {
+.sheet-rolltemplate-ironsworn .sheet-complication,
+.sheet-rolltemplate-ironsworndelve .sheet-complication {
     color: white;
     background-color: #761818;
 }
 
 .sheet-rolltemplate-ironsworn .userscript-tcat,
-.sheet-rolltemplate-ironswornoracles .userscript-tcat {
+.sheet-rolltemplate-ironswornoracles .userscript-tcat,
+.sheet-rolltemplate-ironsworndelve .userscript-tcat {
 	font-weight: bold;
 }
 
 .sheet-rolltemplate-ironsworn td,
-.sheet-rolltemplate-ironswornoracles td {
+.sheet-rolltemplate-ironswornoracles td,
+.sheet-rolltemplate-ironsworndelve td {
 	padding: 5px;
 	/*border-bottom: 1px solid black;*/
 }
 
-.sheet-rolltemplate-ironswornoracles .sheet-oracle-dice {
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-dice,
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-dice {
     width: 2em;
     border-right: 1px solid;
     background: #bfbfbf;
 }
 
-.sheet-rolltemplate-ironswornoracles .sheet-oracle-dice span {
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-dice span,
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-dice span {
     border: 0px !important;
 }
 
-.sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice {
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice,
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-double-dice {
     width: 5.7em;
     border-right: 1px solid;
     text-align: center;
@@ -1371,22 +1679,26 @@ span.sheet-show-bond-info {
     padding: 0.1em;
 }
 
-.sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice span {
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice span,
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-double-dice span {
     border: 0px !important;
 }
 
 .sheet-rolltemplate-ironsworn tr:nth-child(odd),
-.sheet-rolltemplate-ironswornoracles tr:nth-child(odd) {
+.sheet-rolltemplate-ironswornoracles tr:nth-child(odd),
+.sheet-rolltemplate-ironsworndelve tr:nth-child(odd) {
 	background-color: #d9d9d6;
 }
 
 .sheet-rolltemplate-ironsworn tr:nth-child(even),
-.sheet-rolltemplate-ironswornoracles tr:nth-child(even) {
+.sheet-rolltemplate-ironswornoracles tr:nth-child(even),
+.sheet-rolltemplate-ironsworndelve tr:nth-child(even) {
 	background-color: #e9e9e6;
 }
 
 .sheet-rolltemplate-ironsworn .inlinerollresult,
-.sheet-rolltemplate-ironswornoracles .inlinerollresult  {
+.sheet-rolltemplate-ironswornoracles .inlinerollresult,
+.sheet-rolltemplate-ironsworndelve .inlinerollresult  {
 	display: inline-block;
 	min-width: 1.5em;
 	text-align: center;
