fixed styling and added oracles

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -167,7 +167,8 @@ hr.sheet-nav-bottom {
 .sheet-page5tab,
 .sheet-page6tab,
 .sheet-page7tab,
-.sheet-page8tab {
+.sheet-page8tab,
+.sheet-page9tab {
     display: none;
 }
 
@@ -178,7 +179,8 @@ input[type=radio].sheet-page4:checked ~ div.sheet-page4tab,
 input[type=radio].sheet-page5:checked ~ div.sheet-page5tab,
 input[type=radio].sheet-page6:checked ~ div.sheet-page6tab,
 input[type=radio].sheet-page7:checked ~ div.sheet-page7tab,
-input[type=radio].sheet-page8:checked ~ div.sheet-page8tab {
+input[type=radio].sheet-page8:checked ~ div.sheet-page8tab,
+input[type=radio].sheet-page9:checked ~ div.sheet-page9tab {
     display: block;
 }
 
@@ -295,6 +297,15 @@ input.sheet-page8 {
 }
 
 span.sheet-page-label-8 {
+    margin-left: -148px;
+    width: 56px;
+}
+
+input.sheet-page9 {
+    width: 144px;
+}
+
+span.sheet-page-label-9 {
     margin-left: -148px;
     width: 56px;
 }
