added wield a rarity logic

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -707,6 +707,7 @@ input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress {
     display: block;
 }
 
+/* MOVES */
 input[type=radio].sheet-face-danger:checked ~ div.sheet-face-danger,
 input[type=radio].sheet-secure-advantage:checked ~ div.sheet-secure-advantage,
 input[type=radio].sheet-gather-information:checked ~ div.sheet-gather-information,
@@ -1500,7 +1501,19 @@ input[type=radio].sheet-hallowed:checked ~ div.sheet-hallowed,
 input[type=radio].sheet-haunted:checked ~ div.sheet-haunted,
 input[type=radio].sheet-infested:checked ~ div.sheet-infested,
 input[type=radio].sheet-ravaged:checked ~ div.sheet-ravaged,
-input[type=radio].sheet-wild:checked ~ div.sheet-wild {
+input[type=radio].sheet-wild:checked ~ div.sheet-wild,
+input[type=radio].sheet-barrow:checked ~ div.sheet-barrow,
+input[type=radio].sheet-cavern:checked ~ div.sheet-cavern,
+input[type=radio].sheet-frozen-cavern:checked ~ div.sheet-frozen-cavern,
+input[type=radio].sheet-icereach:checked ~ div.sheet-icereach,
+input[type=radio].sheet-mine:checked ~ div.sheet-mine,
+input[type=radio].sheet-pass:checked ~ div.sheet-pass,
+input[type=radio].sheet-ruin:checked ~ div.sheet-ruin,
+input[type=radio].sheet-sea-cave:checked ~ div.sheet-sea-cave,
+input[type=radio].sheet-shadowfen:checked ~ div.sheet-shadowfen,
+input[type=radio].sheet-stronghold:checked ~ div.sheet-stronghold,
+input[type=radio].sheet-tanglewood:checked ~ div.sheet-tanglewood,
+input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
     display: block;
 }
 
@@ -1615,8 +1628,10 @@ input[type=radio].sheet-wild:checked ~ div.sheet-wild {
 }
 
 .sheet-rolltemplate-ironsworndelve .sheet-rarity-die {
-    color: white;
-    background-color: #911d91;
+    border-top: 2px solid #000000;
+    color: #ffffff;
+    background-color: #6a286a;
+    border-bottom: 2px solid #000000;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-alert,
