added display switches for moves

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -742,7 +742,20 @@ input[type=radio].sheet-reach-milestone:checked ~ div.sheet-reach-milestone,
 input[type=radio].sheet-forsake-vow:checked ~ div.sheet-forsake-vow,
 input[type=radio].sheet-advance:checked ~ div.sheet-advance,
 input[type=radio].sheet-pay-the-price:checked ~ div.sheet-pay-the-price,
-input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle {
+input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle,
+input[type=radio].sheet-discover-site:checked ~ div.sheet-discover-site,
+input[type=radio].sheet-delve-the-depths:checked ~ div.sheet-delve-the-depths,
+input[type=radio].sheet-find-opportunity:checked ~ div.sheet-find-opportunity,
+input[type=radio].sheet-reveal-danger:checked ~ div.sheet-reveal-danger,
+input[type=radio].sheet-check-gear:checked ~ div.sheet-check-gear,
+input[type=radio].sheet-locate-objective:checked ~ div.sheet-locate-objective,
+input[type=radio].sheet-escape-the-depths:checked ~ div.sheet-escape-the-depths,
+input[type=radio].sheet-reveal-danger-alt:checked ~ div.sheet-reveal-danger-alt,
+input[type=radio].sheet-wield-rarity:checked ~ div.sheet-wield-rarity,
+input[type=radio].sheet-mark-failure:checked ~ div.sheet-mark-failure,
+input[type=radio].sheet-learn-from-failures :checked ~ div.sheet-learn-from-failures ,
+input[type=radio].sheet-advance-threat:checked ~ div.sheet-advance-threat,
+input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus {
     display: block;
 }
 
