added page references for moves

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -1567,6 +1567,33 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
     margin: 0.5em 1em 0.5em 1em;
 }
 
+.sheet-move-page-footer {
+    text-align: right;
+    font-style: italic;
+}
+
+.sheet-move-delve-column-stat-header,
+.sheet-move-delve-stat-column {
+    width:16%
+}
+
+.sheet-move-delve-column-header,
+.sheet-move-delve-column {
+    width:50%
+}
+
+.sheet-move-delve-column-stat-header,
+.sheet-move-delve-column-header {
+    font-weight: bold;
+}
+
+.sheet-move-delve-row-header {
+    padding: 0px 5px 0px 5px;
+    display: flex;
+    height: auto;
+    border-bottom: 2px solid #343433;
+}
+
 /* ROLL TEMPLATE */
 .sheet-rolltemplate-ironsworn table>thead>tr>th, 
 .sheet-rolltemplate-ironsworn table>tbody>tr>th, 
