added threat and new image

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -56,7 +56,7 @@ h3.sheet-divide::after, h3.sheet-divide::before {
     display: inline-block;
     content: "";
     height: 5px;
-    border-top: 2px solid black;
+    border-top: 2px solid #4C4D4F;
     top: 0;
     width: 220px;
 }
@@ -65,7 +65,7 @@ h3.sheet-site-divide::after, h3.sheet-site-divide::before {
     display: inline-block;
     content: "";
     height: 5px;
-    border-top: 2px solid black;
+    border-top: 2px solid #4C4D4F;
     top: 0;
     width: 331px;
 }
@@ -74,7 +74,7 @@ h3.sheet-site-denizens-divide::after, h3.sheet-site-denizens-divide::before {
     display: inline-block;
     content: "";
     height: 5px;
-    border-top: 2px solid black;
+    border-top: 2px solid #4C4D4F;
     top: 0;
     width: 336px;
 }
@@ -83,7 +83,7 @@ h3.sheet-site-divide-notes::after, h3.sheet-site-divide-notes::before {
     display: inline-block;
     content: "";
     height: 5px;
-    border-top: 2px solid black;
+    border-top: 2px solid #4C4D4F;
     top: 0;
     width: 352px;
 }
@@ -122,7 +122,7 @@ h6 {
 
 button[type="roll"]{
     align-items: left;
-    color: black;
+    color: #4C4D4F;
     font-weight: normal;
     font-size: 20px;
     text-decoration:none;
@@ -152,12 +152,14 @@ hr {
 
 hr.sheet-nav-top {
     margin-top: 0.5em;
-    margin-bottom: 0.2em; 
+    margin-bottom: 0.2em;
+    height: 2px;
 }
 
 hr.sheet-nav-bottom {
     margin-top: 0.2em;
-    margin-bottom: 0.5em; 
+    margin-bottom: 0.5em;
+    height: 2px;
 }
 
 .sheet-page1tab, 
@@ -209,7 +211,7 @@ input.sheet-clear-vow {
 }
 
 .sheet-pages:checked + span.sheet-page-label {
-    background-color: black;
+    background-color: #4C4D4F;
     color: white;
 }
 
@@ -218,7 +220,7 @@ input.sheet-clear-vow {
     border-radius: 4px;
     padding: 2px 4px;
     background-color: #ccc;
-    color: black;
+    color: #4C4D4F;
 }
 
 .sheet-page-label:hover,
@@ -226,7 +228,7 @@ input.sheet-clear-vow {
     border-radius: 4px;
     padding: 2px 4px;
     background-color: #ccc;
-    color: black;
+    color: #4C4D4F;
 }
 
 input.sheet-page1 {
@@ -311,34 +313,34 @@ span.sheet-page-label-9 {
 }
 
 .sheet-vertleft {
-    border-left: 2px solid black;
+    border-left: 2px solid #4C4D4F;
     height: 1000px;
     margin-left: 20px;
     -webkit-border-image: 
-      -webkit-gradient(linear, 0 0, 0 100%, from(black), to(rgba(0, 0, 0, 0))) 1 100%;
+      -webkit-gradient(linear, 0 0, 0 100%, from(#4C4D4F), to(rgba(0, 0, 0, 0))) 1 100%;
     -webkit-border-image: 
-      -webkit-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;
+      -webkit-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%;
     -moz-border-image:
-      -moz-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;    
+      -moz-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%;    
     -o-border-image:
-      -o-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;
+      -o-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%;
     border-image:
-      linear-gradient(to bottom, rgba(0, 0, 0, 0), black, rgba(0, 0, 0, 0)) 1 100%;
+      linear-gradient(to bottom, rgba(0, 0, 0, 0), #4C4D4F, rgba(0, 0, 0, 0)) 1 100%;
 }
 .sheet-vertright {
-    border-right: 2px solid black;
+    border-right: 2px solid #4C4D4F;
     height: 1000px;
     margin-right: 20px;
     -webkit-border-image: 
-      -webkit-gradient(linear, 0 0, 0 100%, from(black), to(rgba(0, 0, 0, 0))) 1 100%;
+      -webkit-gradient(linear, 0 0, 0 100%, from(#4C4D4F), to(rgba(0, 0, 0, 0))) 1 100%;
     -webkit-border-image: 
-      -webkit-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;
+      -webkit-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%;
     -moz-border-image:
-      -moz-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;    
+      -moz-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%;    
     -o-border-image:
-      -o-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;
+      -o-linear-gradient(#4C4D4F, rgba(0, 0, 0, 0)) 1 100%;
     border-image:
-      linear-gradient(to bottom, rgba(0, 0, 0, 0), black, rgba(0, 0, 0, 0)) 1 100%;
+      linear-gradient(to bottom, rgba(0, 0, 0, 0), #4C4D4F, rgba(0, 0, 0, 0)) 1 100%;
 }
 
 .sheet-stats {
@@ -359,7 +361,7 @@ span.sheet-page-label-9 {
 input[type=checkbox].sheet-momentum-burn:hover ~ span.sheet-momentum-burn {
     border-radius: 4px;
     background-color: #ccc;
-    color: black;
+    color: #4C4D4F;
 }
 
 input[type=checkbox].sheet-momentum-burn {
@@ -436,7 +438,7 @@ span.sheet-momentum-burn {
     align-items: center;
     border-radius: 0%;
     background: transparent;
-    border: 2px solid black;
+    border: 2px solid #4C4D4F;
     margin-bottom: 2px;
 }
 .sheet-momentum-input-box {
@@ -448,7 +450,7 @@ span.sheet-momentum-burn {
     align-items: center;
     border-radius: 0%;
     background: transparent;
-    border: 2px solid black;
+    border: 2px solid #4C4D4F;
     margin-bottom: 2px;
 }
 .sheet-resources-title-box {
@@ -460,7 +462,7 @@ span.sheet-momentum-burn {
     align-items: center;
     border-radius: 0%;
     background: transparent;
-    border: 2px solid black;
+    border: 2px solid #4C4D4F;
     margin-top: 20px;
     margin-bottom: 2px;
 }
@@ -473,7 +475,7 @@ span.sheet-momentum-burn {
     align-items: center;
     border-radius: 0%;
     background: transparent;
-    border: 2px solid black;
+    border: 2px solid #4C4D4F;
     margin-bottom: 2px;
 }
 
@@ -497,6 +499,14 @@ span.sheet-momentum-burn {
     font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     font-size: 14px;
+}
+
+input.sheet-vow-name,
+input.sheet-progress-name {
+    background: #E6E7E8;
+    border: 2px solid #494a4c;
+    border-radius: 0;
+    margin-bottom: 0.2em;
 }
 
 .sheet-border {
@@ -600,6 +610,9 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     font-size: 28px;
     text-align: center;
     background: transparent;
+    height: 50px !important;
+    border: 2px solid #4C4D4F;
+    border-radius: 0;
 }
 
 .sheet-progress-input {
@@ -612,6 +625,10 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     justify-content: center;
     align-items: center;
     padding: 2px 0px 0px 12px;
+    margin-bottom: 0.4em;
+    cursor: pointer;
+    border: 2px solid #4C4D4F;
+    border-radius: 0;
 }
 
 .sheet-progress-input:hover {
@@ -623,7 +640,9 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     justify-content: center;
     align-items: center;
     padding: 2px 0px 0px 12px;
-    background-color: #ccc; 
+    background-color: #ccc;
+    border: 2px solid #4C4D4F;
+    border-radius: 0;
 }
 
 .sheet-moves,
@@ -636,7 +655,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 .sheet-move,
 .sheet-oracle {
     margin: 0em;
-    color: black;
+    color: #4C4D4F;
     display: flex;
 }
 
@@ -650,7 +669,7 @@ div.sheet-showhide{
 }
 
 span.sheet-showhide:checked {
-    background-color: black;
+    background-color: #4C4D4F;
     color: white;
 }
 
@@ -670,7 +689,7 @@ span.sheet-showhide:hover {
     border-radius: 4px;
     padding: 2px 4px;
     background-color: #ccc;
-    color: black;
+    color: #4C4D4F;
 }
 
 div.sheet-showhide,
@@ -930,7 +949,7 @@ span.sheet-preview-roll {
 
 .sheet-button-container {
     width: 2.5em;
-    border-right: 1px solid black;
+    border-right: 1px solid #4C4D4F;
 }
 
 .sheet-button-container-preview {
@@ -1215,7 +1234,7 @@ div.sheet-assets .repcontrol{
 }
 
 input.sheet-border-bottom {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #4C4D4F;
 }
 
 .sheet-oracle-footer,
@@ -1300,7 +1319,7 @@ input[type="checkbox"].sheet-show-bond-info:hover ~ span.sheet-show-bond-info {
     border-radius: 4px;
     padding: 2px 4px;
     background-color: #ccc;
-    color: black;
+    color: #4C4D4F;
 }
 
 input[type="checkbox"].sheet-show-bond-info:checked ~ span.sheet-show-bond-info {
@@ -1347,7 +1366,7 @@ span.sheet-show-bond-info {
     padding-left: 0.5em;
     font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
-    color: #343433;
+    color: #4C4D4F;
 }
 
 .sheet-site-descriptors {
@@ -1368,7 +1387,7 @@ p.sheet-site-title {
     text-transform: uppercase;
     vertical-align: bottom;
     display: inline;
-    color: #343433;
+    color: #4C4D4F;
     border-radius: 0.3em 0em 0em 0.3em;
 }
 
@@ -1396,7 +1415,7 @@ input[type="checkbox"].sheet-show-site-info:hover ~ span.sheet-show-site-info {
     border-radius: 4px;
     padding: 2px 4px;
     background-color: #ccc;
-    color: #343433;
+    color: #4C4D4F;
 }
 
 input[type="checkbox"].sheet-show-site-info:checked ~ span.sheet-show-site-info {
@@ -1485,7 +1504,7 @@ p.sheet-denizen-title {
     text-transform: uppercase;
     vertical-align: bottom;
     display: inline;
-    color: #343433;
+    color: #4C4D4F;
 }
 
 .sheet-denizen-input {
@@ -1577,12 +1596,30 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
     width:16%
 }
 
+.sheet-move-delve-column-stat-header-1,
+.sheet-move-delve-stat-column-1 {
+    width:17%
+}
+
+.sheet-move-delve-column-stat-header-2,
+.sheet-move-delve-stat-column-2 {
+    width:18%
+}
+
+.sheet-move-delve-column-stat-header-3,
+.sheet-move-delve-stat-column-3 {
+    width:15%
+}
+
 .sheet-move-delve-column-header,
 .sheet-move-delve-column {
     width:50%
 }
 
 .sheet-move-delve-column-stat-header,
+.sheet-move-delve-column-stat-header-1,
+.sheet-move-delve-column-stat-header-2,
+.sheet-move-delve-column-stat-header-3,
 .sheet-move-delve-column-header {
     font-weight: bold;
 }
@@ -1591,7 +1628,49 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
     padding: 0px 5px 0px 5px;
     display: flex;
     height: auto;
-    border-bottom: 2px solid #343433;
+    border-bottom: 2px solid #4C4D4F;
+}
+
+/* THREAT */
+.sheet-threat-row {
+    flex-flow: row;
+    flex-direction: row;
+    display: inline-block;
+    margin: 0;
+    height: 1em;
+    margin-bottom: 0.4em;
+}
+
+.sheet-threat-box {
+    border: 2px solid #4C4D4F;
+    padding: 0;
+    display: inline-flex;
+}
+
+.sheet-threat-vow {
+    opacity: 0;
+    width: 36px;
+    height: 9px !important;
+    cursor: pointer;
+    vertical-align: top !important;
+}
+
+.sheet-vow-threat-label {
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 12px;
+    margin-left: 0.85em;
+}
+
+.sheet-threat-fill {
+    width: 36px;
+    margin-left: -36px;
+    background: white;
+}
+
+input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
+    background: #4c4d4f;
 }
 
 /* ROLL TEMPLATE */
@@ -1621,7 +1700,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
 .sheet-rolltemplate-ironsworndelve table {
     width: 100%;
 	border: 1px solid;
-	color: black;
+	color: #4C4D4F;
 	font-size: 1em;
     font-family: Verdana, Arial, sans-serif;
     margin: 0px;
@@ -1633,7 +1712,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
 	background-color: #434b4d;
 	color: #ffffff;
 	padding: 2px;
-	/*border-bottom: 1px solid black;*/
+	/*border-bottom: 1px solid #4C4D4F;*/
 	line-height: 1.2em;
 	font-size: 1.2em;
 	text-align: center;
@@ -1721,7 +1800,7 @@ input[type=radio].sheet-underkeep:checked ~ div.sheet-underkeep {
 .sheet-rolltemplate-ironswornoracles td,
 .sheet-rolltemplate-ironsworndelve td {
 	padding: 5px;
-	/*border-bottom: 1px solid black;*/
+	/*border-bottom: 1px solid #4C4D4F;*/
 }
 
 .sheet-rolltemplate-ironswornoracles .sheet-oracle-dice,
