Linked Attribute Formatting
Ensuring the dynamic translations display properly

--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2711,6 +2711,7 @@ span.sheet-vehiclesT {
     padding: 0px;
 }
 
+.sheet-linkedAttSpan,
 .sheet-useHomeworld:checked + .sheet-Homeworld,
 .sheet-usearchetype:checked + .sheet-archetype,
 .sheet-useOccupation:checked + .sheet-Occupation,
