--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -1673,6 +1673,10 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
     background: #4c4d4f;
 }
 
+input[type="checkbox"].sheet-threat-vow:hover ~ .sheet-threat-fill {
+    background: #E6E7E8;
+}
+
 /* ROLL TEMPLATE */
 .sheet-rolltemplate-ironsworn table>thead>tr>th, 
 .sheet-rolltemplate-ironsworn table>tbody>tr>th, 
@@ -1691,13 +1695,21 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
 .sheet-rolltemplate-ironsworndelve table>tfoot>tr>th, 
 .sheet-rolltemplate-ironsworndelve table>thead>tr>td, 
 .sheet-rolltemplate-ironsworndelve table>tbody>tr>td, 
-.sheet-rolltemplate-ironsworndelve table>tfoot>tr>td {
+.sheet-rolltemplate-ironsworndelve table>tfoot>tr>td,
+.sheet-rolltemplate-ironsworndelveoracles table>thead>tr>th, 
+.sheet-rolltemplate-ironsworndelveoracles table>tbody>tr>th, 
+.sheet-rolltemplate-ironsworndelveoracles table>tfoot>tr>th, 
+.sheet-rolltemplate-ironsworndelveoracles table>thead>tr>td, 
+.sheet-rolltemplate-ironsworndelveoracles table>tbody>tr>td, 
+.sheet-rolltemplate-ironsworndelveoracles table>tfoot>tr>td {
     padding: 4px;
     border: none; 
 }
+
 .sheet-rolltemplate-ironsworn table,
 .sheet-rolltemplate-ironswornoracles table,
-.sheet-rolltemplate-ironsworndelve table {
+.sheet-rolltemplate-ironsworndelve table,
+.sheet-rolltemplate-ironsworndelveoracles table {
     width: 100%;
 	border: 1px solid;
 	color: #4C4D4F;
@@ -1708,7 +1720,8 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
 
 .sheet-rolltemplate-ironsworn th,
 .sheet-rolltemplate-ironswornoracles th,
-.sheet-rolltemplate-ironsworndelve th {
+.sheet-rolltemplate-ironsworndelve th,
+.sheet-rolltemplate-ironsworndelveoracles th {
 	background-color: #434b4d;
 	color: #ffffff;
 	padding: 2px;
@@ -1720,7 +1733,8 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
 
 .sheet-rolltemplate-ironsworn .sheet-subheader,
 .sheet-rolltemplate-ironswornoracles .sheet-subheader,
-.sheet-rolltemplate-ironsworndelve .sheet-subheader {
+.sheet-rolltemplate-ironsworndelve .sheet-subheader,
+.sheet-rolltemplate-ironsworndelveoracles .sheet-subheader {
     background-color: #434b4d;
     color: #ffffff;
     line-height: 0.9em;
@@ -1735,7 +1749,8 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
 
 .sheet-rolltemplate-ironsworn .sheet-subfooter,
 .sheet-rolltemplate-ironswornoracles .sheet-subfooter,
-.sheet-rolltemplate-ironsworndelve .sheet-subfooter {
+.sheet-rolltemplate-ironsworndelve .sheet-subfooter,
+.sheet-rolltemplate-ironsworndelveoracles .sheet-subfooter {
     background-color: #b9b9b6;
     line-height: 0.9em;
     font-size: 0.9em;
@@ -1761,7 +1776,8 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
 
 .sheet-rolltemplate-ironsworn .sheet-opportunity,
 .sheet-rolltemplate-ironswornoracles .sheet-opportunity,
-.sheet-rolltemplate-ironsworndelve .sheet-opportunity {
+.sheet-rolltemplate-ironsworndelve .sheet-opportunity,
+.sheet-rolltemplate-ironsworndelveoracles .sheet-opportunity {
     color: white;
     background-color: #0B3F0B;
 }
@@ -1792,31 +1808,36 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
 
 .sheet-rolltemplate-ironsworn .userscript-tcat,
 .sheet-rolltemplate-ironswornoracles .userscript-tcat,
-.sheet-rolltemplate-ironsworndelve .userscript-tcat {
+.sheet-rolltemplate-ironsworndelve .userscript-tcat,
+.sheet-rolltemplate-ironsworndelveoracles .userscript-tcat {
 	font-weight: bold;
 }
 
 .sheet-rolltemplate-ironsworn td,
 .sheet-rolltemplate-ironswornoracles td,
-.sheet-rolltemplate-ironsworndelve td {
+.sheet-rolltemplate-ironsworndelve td,
+.sheet-rolltemplate-ironsworndelveoracles td {
 	padding: 5px;
 	/*border-bottom: 1px solid #4C4D4F;*/
 }
 
 .sheet-rolltemplate-ironswornoracles .sheet-oracle-dice,
-.sheet-rolltemplate-ironsworndelve .sheet-oracle-dice {
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-dice,
+.sheet-rolltemplate-ironsworndelveoracles .sheet-oracle-dice {
     width: 2em;
     border-right: 1px solid;
     background: #bfbfbf;
 }
 
 .sheet-rolltemplate-ironswornoracles .sheet-oracle-dice span,
-.sheet-rolltemplate-ironsworndelve .sheet-oracle-dice span {
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-dice span,
+.sheet-rolltemplate-ironsworndelveoracles .sheet-oracle-dice span {
     border: 0px !important;
 }
 
 .sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice,
-.sheet-rolltemplate-ironsworndelve .sheet-oracle-double-dice {
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-double-dice,
+.sheet-rolltemplate-ironsworndelveoracles .sheet-oracle-double-dice {
     width: 5.7em;
     border-right: 1px solid;
     text-align: center;
@@ -1825,25 +1846,29 @@ input[type="checkbox"].sheet-threat-vow:checked ~ .sheet-threat-fill {
 }
 
 .sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice span,
-.sheet-rolltemplate-ironsworndelve .sheet-oracle-double-dice span {
+.sheet-rolltemplate-ironsworndelve .sheet-oracle-double-dice span,
+.sheet-rolltemplate-ironsworndelveoracles .sheet-oracle-double-dice span {
     border: 0px !important;
 }
 
 .sheet-rolltemplate-ironsworn tr:nth-child(odd),
 .sheet-rolltemplate-ironswornoracles tr:nth-child(odd),
-.sheet-rolltemplate-ironsworndelve tr:nth-child(odd) {
+.sheet-rolltemplate-ironsworndelve tr:nth-child(odd),
+.sheet-rolltemplate-ironsworndelveoracles tr:nth-child(odd) {
 	background-color: #d9d9d6;
 }
 
 .sheet-rolltemplate-ironsworn tr:nth-child(even),
 .sheet-rolltemplate-ironswornoracles tr:nth-child(even),
-.sheet-rolltemplate-ironsworndelve tr:nth-child(even) {
+.sheet-rolltemplate-ironsworndelve tr:nth-child(even),
+.sheet-rolltemplate-ironsworndelveoracles tr:nth-child(even) {
 	background-color: #e9e9e6;
 }
 
 .sheet-rolltemplate-ironsworn .inlinerollresult,
 .sheet-rolltemplate-ironswornoracles .inlinerollresult,
-.sheet-rolltemplate-ironsworndelve .inlinerollresult  {
+.sheet-rolltemplate-ironsworndelve .inlinerollresult,
+.sheet-rolltemplate-ironsworndelveoracles .inlinerollresult  {
 	display: inline-block;
 	min-width: 1.5em;
 	text-align: center;
