3  new oracle previews added

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -1677,6 +1677,14 @@ input[type="checkbox"].sheet-threat-vow:hover ~ .sheet-threat-fill {
     background: #E6E7E8;
 }
 
+/* DELVE ORACLES */
+input[type="radio"].sheet-feature-aspect:checked ~ div.sheet-feature-aspect,
+input[type="radio"].sheet-feature-focus:checked ~ div.sheet-feature-focus,
+input[type="radio"].sheet-site-name-format:checked ~ div.sheet-site-name-format,
+input[type="radio"].sheet-site-name-desc:checked ~ div.sheet-site-name-desc {
+    display: block;
+}
+
 /* ROLL TEMPLATE */
 .sheet-rolltemplate-ironsworn table>thead>tr>th, 
 .sheet-rolltemplate-ironsworn table>tbody>tr>th, 
