(ironsworn) added the rest of the oracles

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -1681,7 +1681,32 @@ input[type="checkbox"].sheet-threat-vow:hover ~ .sheet-threat-fill {
 input[type="radio"].sheet-feature-aspect:checked ~ div.sheet-feature-aspect,
 input[type="radio"].sheet-feature-focus:checked ~ div.sheet-feature-focus,
 input[type="radio"].sheet-site-name-format:checked ~ div.sheet-site-name-format,
-input[type="radio"].sheet-site-name-desc:checked ~ div.sheet-site-name-desc {
+input[type="radio"].sheet-site-name-desc:checked ~ div.sheet-site-name-desc,
+input[type="radio"].sheet-site-name-detail:checked ~ div.sheet-site-name-detail,
+input[type="radio"].sheet-site-name-namesake:checked ~ div.sheet-site-name-namesake,
+input[type="radio"].sheet-site-name-place:checked ~ div.sheet-site-name-place,
+input[type="radio"].sheet-site-nature-theme:checked ~ div.sheet-site-nature-theme,
+input[type="radio"].sheet-site-nature-domain:checked ~ div.sheet-site-nature-domain,
+input[type="radio"].sheet-character-disposition:checked ~ div.sheet-character-disposition,
+input[type="radio"].sheet-character-activity:checked ~ div.sheet-character-activity,
+input[type="radio"].sheet-monstrosity-size:checked ~ div.sheet-monstrosity-size,
+input[type="radio"].sheet-monstrosity-primary-form:checked ~ div.sheet-monstrosity-primary-form,
+input[type="radio"].sheet-monstrosity-characteristics:checked ~ div.sheet-monstrosity-characteristics,
+input[type="radio"].sheet-monstrosity-abilities:checked ~ div.sheet-monstrosity-abilities,
+input[type="radio"].sheet-trap-event:checked ~ div.sheet-trap-event,
+input[type="radio"].sheet-trap-component:checked ~ div.sheet-trap-component,
+input[type="radio"].sheet-combat-event-method:checked ~ div.sheet-combat-event-method,
+input[type="radio"].sheet-combat-event-target:checked ~ div.sheet-combat-event-target,
+input[type="radio"].sheet-threat-category:checked ~ div.sheet-threat-category,
+input[type="radio"].sheet-threat-cursed-site:checked ~ div.sheet-threat-cursed-site,
+input[type="radio"].sheet-threat-burgeoning-conflict:checked ~ div.sheet-threat-burgeoning-conflict,
+input[type="radio"].sheet-threat-environmental-calamity:checked ~ div.sheet-threat-environmental-calamity ,
+input[type="radio"].sheet-threat-malignant-plague:checked ~ div.sheet-threat-malignant-plague,
+input[type="radio"].sheet-threat-rampaging-creature:checked ~ div.sheet-threat-rampaging-creature,
+input[type="radio"].sheet-threat-ravaging-horde:checked ~ div.sheet-threat-ravaging-horde,
+input[type="radio"].sheet-threat-scheming-leader:checked ~ div.sheet-threat-scheming-leader,
+input[type="radio"].sheet-threat-power-hungry-mystic:checked ~ div.sheet-threat-power-hungry-mystic,
+input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous-cult {
     display: block;
 }
 
